minor table fix — vertial align

--- a/source/css/_partial/post/contents.styl
+++ b/source/css/_partial/post/contents.styl
@@ -146,11 +146,13 @@ $box-shadow = inset 0 1px 0 rgba(255, 255, 255, .6), 0 22px 40px 4px       rgba(
             text-align left
             border-bottom 1px solid #AAAAAA
             font-weight bold
+            vertical-align top
         td
             padding-right 20px
             padding-bottom 26px
             white-space nowrap
             margin-right 50px
+            vertical-align top
             &.text
                 text-align left
             &.number
